RESOLVED FIXED21645
REGRESSION (r37469-r37605): File Input not Uploaded in Multipart/Form-data Form
https://bugs.webkit.org/show_bug.cgi?id=21645
Summary REGRESSION (r37469-r37605): File Input not Uploaded in Multipart/Form-data Form
john
Reported 2008-10-16 10:34:57 PDT
The $_FILES variable in php is not getting populated at all when a multipart/form-data ecntype form is submitted. It works fine in the shipped version of Safari 3.1.2, but the nightly build fails to populate it (which tells me the form is not being submitted properly?).
Attachments
test (20 bytes, text/plain)
2008-10-18 19:05 PDT, Darin Adler
no flags
patch (4.91 KB, patch)
2008-10-18 19:09 PDT, Darin Adler
mitz: review+
test (10 bytes, text/plain)
2008-12-22 15:48 PST, Darin Adler
no flags
Robert Blaut
Comment 1 2008-10-16 22:47:08 PDT
Last working nightly r37469. Confirmed. I saw the bug for the first time in Textpattern control panel during trying uploading file with multipart/form-data form. Possible duplication: bug 21518.
Robert Blaut
Comment 2 2008-10-17 10:23:53 PDT
Possible duplication: bug 21707
Robert Blaut
Comment 3 2008-10-18 03:51:15 PDT
Possible duplication: bug 21730
Timothy Hatcher
Comment 4 2008-10-18 17:33:24 PDT
This prevents uploading patches to Bugzilla too. Sam thinks it was a change Darin did.
Darin Adler
Comment 5 2008-10-18 18:52:20 PDT
Should be very quick to fix.
Darin Adler
Comment 6 2008-10-18 19:05:20 PDT
Darin Adler
Comment 7 2008-10-18 19:09:11 PDT
mitz
Comment 8 2008-10-18 19:11:54 PDT
Comment on attachment 24498 [details] patch + This "two at a time" a confusing way to do things, which explains why I got Typo (missing "is"?). r=me
Darin Adler
Comment 9 2008-10-18 19:12:57 PDT
Mark Rowe (bdash)
Comment 10 2008-10-18 22:28:37 PDT
*** Bug 21707 has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 11 2008-10-18 22:28:44 PDT
*** Bug 21734 has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 12 2008-10-18 22:29:10 PDT
*** Bug 21730 has been marked as a duplicate of this bug. ***
john
Comment 13 2008-12-22 09:49:02 PST
It appears that this bug has reappeared in in r39433. The $_FILES variable in php is not getting populated on form submit if no files are chosen for the file form elements. Works fine in the current release of Safari and Firefox, but is broken in the nightly build.
Darin Adler
Comment 14 2008-12-22 12:39:44 PST
I understand that a bug was introduced by the new check-in, but I think that reopening this old bug report wasn't the best way to deal with that. Even though the symptom is the same.
Darin Adler
Comment 15 2008-12-22 12:41:19 PST
Nico, George, it looks like the refactoring broke file uploading.
George Staikos
Comment 16 2008-12-22 14:58:37 PST
Oops. We could back out, or fix it later today. Which do you prefer?
Nikolas Zimmermann
Comment 17 2008-12-22 15:11:16 PST
(In reply to comment #16) > Oops. We could back out, or fix it later today. Which do you prefer? > I'll investigate in the problem. We clearly need a layout test (!) - it bothers me stuff like that is not covered by layout tests.
Darin Adler
Comment 18 2008-12-22 15:47:39 PST
(In reply to comment #17) > I'll investigate in the problem. We clearly need a layout test (!) - it bothers > me stuff like that is not covered by layout tests. Me too. I'm hoping this is quick to fix -- we probably don't need to back out if we can figure it out today.
Darin Adler
Comment 19 2008-12-22 15:48:52 PST
Darin Adler
Comment 20 2008-12-22 15:52:06 PST
Hmm, a single file upload to bugzilla just worked for me. So this new bug does not have the same scope as the old one. Could someone please file a new bug report instead of reopening this one, since the new bug seems quite different from the old?
Nikolas Zimmermann
Comment 21 2008-12-22 16:22:36 PST
(In reply to comment #20) > Hmm, a single file upload to bugzilla just worked for me. So this new bug does > not have the same scope as the old one. Could someone please file a new bug > report instead of reopening this one, since the new bug seems quite different > from the old? > I think I found the bug, I'll file a new seperated one.
Nikolas Zimmermann
Comment 22 2008-12-22 17:01:45 PST
(In reply to comment #21) > (In reply to comment #20) > > Hmm, a single file upload to bugzilla just worked for me. So this new bug does > > not have the same scope as the old one. Could someone please file a new bug > > report instead of reopening this one, since the new bug seems quite different > > from the old? > > > > I think I found the bug, I'll file a new seperated one. Bug 22971 will cover this new seperated issue. Let's move there.
Note You need to log in before you can comment on or make changes to this bug.